--- a/src/main/yaml/simulation.yml
+++ b/src/main/yaml/simulation.yml
@@ -8,20 +8,38 @@ variables:
     default: 0
   speed: &speed
     formula: 10
+  reactivity: &reactivity
+    formula: 100
+  retentionTime: &retention
+    formula: 10
+  retentionFrequency: &retentionFrequency
+    formula: 1
 
 seed:
   scenario: *seed
   simulation: *seed
 
-
 network-model:
   type: ConnectWithinDistance
-  parameters: [0.5]
+  parameters: [0.4]
+
+reactiveGradient: &reactive
+  - time-distribution: *reactivity
+    type: ChemicalReaction
+    actions:
+      - type: RunProtelisProgram
+        parameters: [org:protelis:tutorial:distanceTo, *retention]
+    conditions:
+      - type: NewMessageReceivedOrPositionChanged
+  - program: send
+  - time-distribution: *retentionFrequency
+    program: 1//self.getCurrentTime()
 
 gradient: &gradient
   - time-distribution: 1
     program: org:protelis:tutorial:distanceTo
   - program: send
+
 
 movement: &movement
   - time-distribution: *speed
@@ -38,7 +56,7 @@ displacements:
       - molecule: source
         concentration: true
     programs:
-      - *gradient
+      - *reactive
       - *movement
   - in:
       type: Grid
@@ -50,4 +68,4 @@ displacements:
         molecule: source
         concentration: true
     programs:
-      - *gradient
+      - *reactive
